feat : ScheduleDay 도메인 도입으로 Travel 도메인 전체 구조 변경 - 전체 행선지 조회 Service Exception 추가 - Travel ErrorType 추가
# Conflicts:
#	backend/src/main/java/com/frend/planit/global/response/ErrorType.java